Cleanup for PyOpenMS

--- a/pyopenms/Dockerfile
+++ b/pyopenms/Dockerfile
@@ -1,11 +1,11 @@
 FROM python:3.6.6-slim-stretch
+LABEL maintainer="luk.zim91@gmail.com"
 
-ARG NJOBS=1
-WORKDIR /tmp
 RUN apt-get update -y && \
     apt-get install -y --no-install-recommends --no-install-suggests \
         	libglib2.0-0 && \
     pip install --no-cache-dir -U pip && \
     pip install --no-cache-dir -U numpy && \
-    pip install --no-cache-dir -U pyopenms
+    pip install --no-cache-dir -U pyopenms && \
+    rm -rf /tmp/* /var/tmp/* /var/lib/apt/lists/*
 
