--- a/arvados-jobs-jre/Dockerfile
+++ b/arvados-jobs-jre/Dockerfile
@@ -1,11 +1,8 @@
-FROM arvados/jobs:latest
+FROM lukaszimmermann/arvados-jobs:alpine3.8
 LABEL maintainer="luk.zim91@gmail.com"
 
 USER root
-RUN echo deb http://http.debian.net/debian jessie-backports main >> /etc/apt/sources.list && \
-    apt-get update -y && \
-    apt-get install -t jessie-backports --no-install-recommends --no-install-suggests -y \
-        openjdk-8-jre && \
-    update-alternatives --config java
+RUN apk update --no-cache -U && \
+    apk add --no-cache -U \
+     openjdk8-jre-base
 USER crunch
-
