Update: Arvados Parent

--- a/arvados/arvados-parent/Dockerfile
+++ b/arvados/arvados-parent/Dockerfile
@@ -7,14 +7,18 @@ WORKDIR /tmp
 
 # We need to do the following things for all Arvados related serviced
 # 1. Install the packages dirmngr and gnupg2 for adding the package key
-# 2. Install bundler gem
-# 3. Add the key
-# 4. Add the Arvados package repository
-# 5. Update the package index and clear all temporary files
+# 2. Install the packages that are the dependencies of arvados-sso-server and
+#    arvados-api-server (nginx-light and libpq-dev)
+# 3. Install bundler gem
+# 4.. Add the key
+# 5. Add the Arvados package repository
+# 6. Update the package index and clear all temporary files
 RUN apt-get update -y && \
     apt-get install -y --no-install-recommends --no-install-suggests \
        dirmngr \
-       gnupg2 && \
+       gnupg2 \
+       nginx-light \
+       libpq-dev && \
     gem install bundler && \
     /usr/bin/apt-key adv --keyserver pool.sks-keyservers.net --recv 1078ECD7 && \
     echo "deb http://apt.arvados.org/ stretch main" | tee /etc/apt/sources.list.d/arvados.list && \
