Add: Phusion Passenger to Arvados Parent

--- a/arvados/arvados-parent/Dockerfile
+++ b/arvados/arvados-parent/Dockerfile
@@ -1,11 +1,5 @@
-FROM ruby:2.3.7-slim-stretch
+FROM debian:stretch-slim
 LABEL maintainer="luk.zim91@gmail.com"
-
-# Set the locale
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US.UTF-8
-ENV LC_CTYPE en_US.UTF-8
-ENV LC_ALL en_US.UTF-8
 
 # Change the workdir to /tmp, so all temporary files will be deleted at
 # the end of the next RUN instruction
@@ -23,12 +17,21 @@ WORKDIR /tmp
 RUN apt-get update -y && \
     apt-get install -y --no-install-recommends --no-install-suggests \
       locales && \
-    echo 'en_US.UTF-8 UTF-8' > /etc/locale.gen && \
-    locale-gen && \
+    echo 'en_US.UTF-8 UTF-8' > /etc/locale.gen && sync && \
+    locale-gen && sync &&  \
     apt-get update -y && \
     apt-get install -y --no-install-recommends --no-install-suggests \
-       dirmngr \
-       gnupg2 \
+      dirmngr \
+      gnupg2 && \
+    /usr/bin/apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 561F9B9CAC40B2F7 && \
+    apt-get update -y && \
+    apt-get install -y --no-install-recommends --no-install-suggests \
+       apt-transport-https \
+       ca-certificates && \
+    echo 'deb https://oss-binaries.phusionpassenger.com/apt/passenger stretch main' > /etc/apt/sources.list.d/passenger.list && sync && \
+    apt-get update -y && \
+    apt-get install -y --no-install-recommends --no-install-suggests \
+       libnginx-mod-http-passenger \
        nginx-light \
        libpq-dev && \
     gem install bundler && \
@@ -36,3 +39,9 @@ RUN apt-get update -y && \
     echo "deb http://apt.arvados.org/ stretch main" | tee /etc/apt/sources.list.d/arvados.list && \
     apt-get update -y && \
     rm -rf /tmp/* /var/tmp/* && sync
+
+# Set the locale
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US.UTF-8
+ENV LC_CTYPE en_US.UTF-8
+ENV LC_ALL en_US.UTF-8
