Fix: Several fixes

--- a/arvados/Makefile
+++ b/arvados/Makefile
@@ -1,13 +1,8 @@
-.PHONY: init_sso_volume check-env
+.PHONY: init_sso_volume
 
 # Inits the Volume for the Arvados SSO server
-init_sso_volume: check-env
-	docker volume create arvados_sso_pg_11
-	docker build --no-cache --rm -t arvados_sso_pg:11  arvados-volume-sso
-	docker run --rm -v arvados_sso_pg_11:/tmp/volume arvados_sso_pg:11
+init_sso_volume:
+	docker volume create arvados_sso_pg_10
+	docker build --no-cache --rm -t arvados_sso_pg:10  arvados-volume-sso
+	docker run --rm -v arvados_sso_pg_10:/tmp/volume arvados_sso_pg:10
 
-
-check-env:
-ifndef SSO_PASSWORD
-  $(error SSO_PASSWORD is undefined)
-endif
