Update Arvados parent

--- a/arvados/parent/Dockerfile
+++ b/arvados/parent/Dockerfile
@@ -5,6 +5,9 @@ WORKDIR /tmp
 RUN /usr/bin/apt-key adv --keyserver pool.sks-keyservers.net --recv 1078ECD7 && \
     echo "deb http://apt.arvados.org/ xenial main" | tee /etc/apt/sources.list.d/arvados.list && \
     gem install bundler && \
+    cd / && \
+    apt-get clean && \
+    rm -rf /tmp/* /var/tmp/* /var/lib/apt/lists/* && \
     sync
 WORKDIR /
 
