--- a/archlinux/repo-aur/Dockerfile
+++ b/archlinux/repo-aur/Dockerfile
@@ -3,6 +3,7 @@ LABEL maintainer="luk.zim91@gmail.com"
 
 COPY packages /tmp/packages
 COPY copy_pkgs.sh /opt/copy_pkgs.sh
+COPY install_aur.sh /opt/install_aur.sh 
 
 ENV BUILD_USER pkg
 ENV BUILD_MOUNT "/opt/repository"
@@ -37,7 +38,7 @@ RUN pacman -Syyu --noconfirm \
 # Install pikaur (AUR helper)
 USER "${BUILD_USER}"
 WORKDIR /tmp
-RUN /tmp/install_aur.sh pikaur && sync
+RUN /opt/install_aur.sh pikaur && sync
 
 # Assemble list of packages
 USER root
@@ -45,10 +46,11 @@ WORKDIR /tmp
 RUN \
     # Assemble list of all package names available in core, extra and community 
     pacman -Si | grep '^Name' | awk '{print $3}' | sort > /tmp/packages_all && \
-    chmod 0444 /tmp/packages_all && \
     # Split packages into pacman and AUR packages
-    comm -23 /tmp/packages /tmp/packages_all > /tmp/packages_aur && \
-    rm /tmp/packages_all /tmp/packages && \
+    cat /tmp/packages | sort > /tmp/packages_sorted && \
+    rm /tmp/packages && \
+    comm -23 /tmp/packages_sorted /tmp/packages_all > /tmp/packages_aur && \
+    rm /tmp/packages_all  && \
     chmod 0444 /tmp/packages_aur && \
     mkdir -p "${BUILD_REPO}" && sync
 
