Fix: add diffutils

--- a/archlinux/repo-aur/Dockerfile
+++ b/archlinux/repo-aur/Dockerfile
@@ -17,6 +17,7 @@ WORKDIR /tmp
 RUN pacman -Syyu --noconfirm \
       awk \
       binutils \
+      diffutils \
       fakeroot \
       file \
       gcc \
