Add more packages

--- a/archlinux/repo-aur/Dockerfile
+++ b/archlinux/repo-aur/Dockerfile
@@ -69,8 +69,23 @@ RUN pacman -Syyu --noconfirm \
       qt5-webkit \
       bison \
       flex \
-      jdk11-openjdk > /dev/null 2>&1 && \
-    gpg --recv-keys 702353E0F7E48EDB > /dev/null 2>&1 && \
+      jdk11-openjdk \
+      speexdsp \
+      autoconf \
+      gtk2 \
+      libidn \
+      libxaw \
+      speex \
+      nodejs \
+      asar \
+      c-ares \
+      hunspell \
+      libevent \
+      libvpc \
+      mailcap \
+      mozilla-common \
+      startup-notification \
+      wget > /dev/null 2>&1 && \
     useradd -m -s /bin/bash "${BUILD_USER}" && \
     echo "${BUILD_USER} ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers && \
     rm -rf /var/cache/pacman/pkg && sync
@@ -97,6 +112,8 @@ RUN \
 USER "${BUILD_USER}"
 WORKDIR /tmp
 RUN gpg --recv-keys 702353E0F7E48EDB && \
+    gpg --recv-keys EB774491D9FF06E2 && \
     xargs pikaur -Sw --noconfirm < /tmp/packages_aur && sync
 
 ENTRYPOINT [ "copy_pkgs.sh", "/opt/repository/files/aur/os/x86_64" ]
+
