--- a/htpasswd/Dockerfile
+++ b/htpasswd/Dockerfile
@@ -4,4 +4,5 @@ RUN apk update -U --no-cache && \
     apk add -U --no-cache \
       apache2-utils && \
     rm -rf /tmp/* /var/tmp/* && sync
+ENTRYPOINT ["htpasswd"]
 
