Output in Mayan image now quiet

--- a/mayanedms/Dockerfile
+++ b/mayanedms/Dockerfile
@@ -1,9 +1,9 @@
-FROM mayanedms/mayanedms:latest
+FROM mayanedms/mayanedms:3.3
 LABEL maintainer="luk.zim91@gmail.com"
 
-RUN apt-get update -y && \
-    apt-get install -y tesseract-ocr-deu && \
-    apt-get autoclean -y && \
-    apt-get clean -y && \
+RUN apt-get update -yqq && \
+    apt-get install -yqq tesseract-ocr-deu && \
+    apt-get autoclean -yqq && \
+    apt-get clean -yqq && \
     rm -rf /tmp/* /var/tmp/* /var/lib/apt/lists/* && sync
 
