--- a/mayanedms/Dockerfile
+++ b/mayanedms/Dockerfile
@@ -1,9 +1,15 @@
-FROM mayanedms/mayanedms:3.3
+FROM mayanedms/mayanedms:3
 LABEL maintainer="luk.zim91@gmail.com"
 
 RUN apt-get update -yqq && \
     apt-get install -yqq tesseract-ocr-deu && \
     apt-get autoclean -yqq && \
     apt-get clean -yqq && \
-    rm -rf /tmp/* /var/tmp/* /var/lib/apt/lists/* && sync
+    rm -rf \
+      /var/lib/apt/lists/* \
+      /tmp/* \
+      /var/tmp/* \
+      /usr/share/man \
+      /usr/share/doc \
+      /usr/share/doc-base && sync
 
